Stable-Diffusion-UI-Novel/yuanxiao_kubernetes/0_public_mino/service_yx.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    meta.helm.sh/release-name: my-release
    meta.helm.sh/release-namespace: default
  labels:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: minio
    helm.sh/chart: minio-12.4.1
  name: my-release-minio
  namespace: default
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: minio-api
    port: 9000
    protocol: TCP
    targetPort: minio-api
  - name: minio-console
    port: 9001
    protocol: TCP
    targetPort: minio-console
  selector:
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/name: minio
  sessionAffinity: None
  type: LoadBalancer
